# LI2PL8G12

./: CMakeLists.txt  Camada_Interface.c  Camada_Interface.h  Camada_dados.c  Camada_dados.h  Definiçoes.h  Funcoes_Ficheiro.c  Funcoes_Ficheiro.h  Funções Ficheiro.c  Funções Ficheiro.h  Logica_Programa.c  Logica_Programa.h  Mapa.c  Mapa.h  README.md  main.c
Bot/: Bot  Bot.c  Bot.h  Bot1  Camada_Interface.c  Camada_Interface.h  Camada_dados.c  Camada_dados.h  Funcoes_Ficheiro.c  Funcoes_Ficheiro.h  Logica_Programa.c  a.out  funcoes_aux.c  funcoes_aux.h  listas.c  listas.h  main.c  tab4  tab5
Listas/: listas.c  listas.h  main.c
Projeto/: Camada_dados.c
bot/: Bot.h  Camada_dados.h  Funcoes_Ficheiro.c  Funcoes_Ficheiro.h  Logica_Programa.h  listas.c  listas.h
doc/: Camada__Interface_8c.xml  Camada__Interface_8h.xml  Camada__dados_8c.xml  Camada__dados_8h.xml  Funcoes__Ficheiro_8c.xml  Funcoes__Ficheiro_8h.xml  Logica__Programa_8c.xml  Logica__Programa_8h.xml  combine.xslt  index.xml  listas_8c.xml  listas_8h.xml  main_8c.xml  md_README.xml  structCOORDENADA.xml  structESTADO.xml  structJOGADA.xml  structlistas.xml  structpar__dados.xml
html/: Camada__Interface_8h.html  Camada__Interface_8h__dep__incl.map  Camada__Interface_8h__dep__incl.md5  Camada__Interface_8h__incl.map  Camada__Interface_8h__incl.md5  Camada__Interface_8h_source.html  Camada__dados_8h.html  Camada__dados_8h__dep__incl.map  Camada__dados_8h__dep__incl.md5  Camada__dados_8h_source.html  Funcoes__Ficheiro_8h_source.html  Logica__Programa_8h.html  Logica__Programa_8h__dep__incl.map  files.html  (+19 more)
(+63 files in other folders)
